# CSE310-sprint-5-webapp

./: .gitignore  Cargo.toml  DiceRollerApp.spec  README.md  Sprintlog.md  app.py  favorite_rolls.json  requirements.txt
dice_core/: Cargo.toml
dice_core/src/: lib.rs
dice_gui/: Cargo.toml
dice_gui/src/: main.rs
python_webapp/: app.py  desktop_launcher.py
python_webapp/static/: app.js  styles.css
python_webapp/templates/: index.html
scripts/: bootstrap_linux.sh  bootstrap_windows.ps1  build_desktop_windows.ps1
