[package]
name = "dice_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
dice_core = { path = "../dice_core" }
meval = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
